# SCAM

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: basic_usage.py  convenience_methods.py  lazy_loading_demo.py  safe_measurement_workflow.py  unified_api_demo.py
sca_datamodel/: __init__.py  experiment.py  trace.py
sca_datamodel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scam/: __init__.py  schema.py  series.py  trace.py  tracedb.py
scam.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_datamodel.py  test_lazy_loading.py  test_safety_features.py  test_schema.py  test_unified_api.py
